[gd_scene load_steps=11 format=3 uid="uid://3cjnfl08b7sy"]

[ext_resource type="Script" path="res://items/sword.gd" id="1_y3nuo"]
[ext_resource type="Texture2D" uid="uid://duiw1d6ae2y0i" path="res://shader/whitesquare.png" id="3_12ybh"]
[ext_resource type="Texture2D" uid="uid://ux2b5mxf1vel" path="res://items/sword.png" id="3_qv6ly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sqb6"]
size = Vector2(6.42086, 5.70644)

[sub_resource type="CircleShape2D" id="CircleShape2D_q7scf"]
radius = 5.09902

[sub_resource type="Animation" id="Animation_5mdk5"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Holder/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yy1vx"]
_data = {
&"default": SubResource("Animation_5mdk5")
}

[sub_resource type="Animation" id="Animation_p41r7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Holder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Holder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_737b3"]
resource_name = "stab"
length = 0.300003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Holder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.0868803, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(-13, -12), Vector2(-13, -12), Vector2(-7, -7), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Holder:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.158274, -0.136136, -0.136136, 0.0349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfr3r"]
_data = {
&"stab": SubResource("Animation_737b3"),
&"RESET": SubResource("Animation_p41r7")
}

[node name="Sword" type="Node2D"]
script = ExtResource("1_y3nuo")

[node name="Holder" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="Holder"]
texture_filter = 1
position = Vector2(20, 20)
texture = ExtResource("3_qv6ly")
offset = Vector2(-4, -4)
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://items/sword.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "a06d0cdab11ff12c2ff3d4afd9dfc138"

[node name="Area2D" type="Area2D" parent="Holder/Sprite"]
position = Vector2(-20, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Holder/Sprite/Area2D"]
position = Vector2(1.53764, 1.49741)
rotation = -0.785398
shape = SubResource("RectangleShape2D_5sqb6")

[node name="Sprite2" type="Sprite2D" parent="Holder/Sprite"]
clip_children = 1
texture_filter = 1
texture = ExtResource("3_qv6ly")
offset = Vector2(-4, -4)
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://items/sword.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "11a6fae0c17aae78fb2e608051ad4f8a"

[node name="SwordProgress" type="Node2D" parent="Holder/Sprite/Sprite2"]
modulate = Color(0.592157, 0.254902, 0.2, 1)
position = Vector2(5, 5)
rotation = -0.785398
scale = Vector2(1, 1e-05)

[node name="Sprite2D" type="Sprite2D" parent="Holder/Sprite/Sprite2/SwordProgress"]
position = Vector2(0, -18)
scale = Vector2(1.872, 4.5)
texture = ExtResource("3_12ybh")

[node name="PickUpper" type="Area2D" parent="Holder"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Holder/PickUpper"]
position = Vector2(2, 2)
shape = SubResource("CircleShape2D_q7scf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yy1vx")
}

[node name="AttackAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xfr3r")
}

[connection signal="area_entered" from="Holder/Sprite/Area2D" to="." method="_on_area_2d_area_entered"]
